2006-01-17  Christian Persch  <chpe@cvs.gnome.org>

	* libgnome/gnome-init.c: (gnome_bonobo_module_info_get),
	(gnome_bonobo_activation_module_info_get),
	(gnome_vfs_module_info_get), (libgnome_module_info_get):
	Initialise all members of the GnomeModuleInfo structs.

2006-01-16  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* configure.in, NEWS: release 2.13.7.

	* libgnome/gnome-program.h: non-conditionally include popt.h

2006-01-16  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* configure.in, NEWS: release 2.13.6.

2006-01-16  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* libgnome/gnome-init.c: (gnome_bonobo_activation_module_info_get),
	(libgnome_module_info_get):
	* libgnome/gnome-program.c: (gnome_program_preinit):
	* libgnome/gnome-program.h: apply patch from Christian Persch to mark
	popt as deprecated and rename the GnomeModuleInfo struct member
	for using GOption for argument parsing.  Closes bug #326846.

2006-01-15  Kjartan Maraas  <kmaraas@gnome.org>

	* doc/reference/tmpl/gnome-program.sgml: Add deprecation notices
	for the popt stuff and improve the docs for GOption argument
	parsing. Closes bug #317545. (Christian Perch)

2006-01-13  Federico Mena Quintero  <federico@ximian.com>

	* doc/reference/tmpl/gnome-program.sgml: Patch from Tim Müller
	<t.i.m@zen.co.uk> to add an example on how to get non-option
	command-line arguments from a GOptionContext after using
	gnome_program_init().

2006-01-12  Abel Cheung  <maddog@linuxhall.org>

	* configure.in: Added "zh_HK" to ALL_LINGUAS.

2006-01-09  Sebastien Bacher  <seb128@debian.org>

	* schemas/desktop_gnome_interface.schemas.in:
	don't make the toolbars detachable by default (Closes: #326330)

2006-01-09  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Up version.
	* libgnome/.cvsignore: Add a missing file
	* libgnome/gnome-init.c: (gnome_bonobo_activation_module_info_get),
	(libgnome_module_get_goption_group), (libgnome_module_info_get):
	* libgnome/gnome-program.c: (gnome_program_preinit):