@@ -1,3 +1,10 @@
+2006-02-12  Vincent Untz  <vuntz@gnome.org>
+
+	Use GOption instead of popt by default
+	
+	* libgnome/gnome-program.c: (gnome_program_preinit): use GOption by
+	default if the program does not specify any help data
+
 2006-01-17  Christian Persch  <chpe@cvs.gnome.org>
 
 	* libgnome/gnome-init.c: (gnome_bonobo_module_info_get),
